--- a/views/index.jade
+++ b/views/index.jade
@@ -3,117 +3,113 @@ html
 	head
 		title Asterank - 3D Asteroid Orbit Space Simulation
 		meta(charset="utf-8")
-		meta(name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0")
+		meta(name="viewport",content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0")
 		link(rel="stylesheet",href="css/style.css")
 body
-	noscript Sorry, this page requires Canvas/WebGL, so you'll need to enable JavaScript.
+	noscript
+		| Sorry, this page requires Canvas/WebGL, so you'll need to enable JavaScript.
 
-  script(type="x-shader/x-fragment",id="fragmentshader")
-    #define pi 3.141592653589793238462643383279
+	script(type="x-shader/x-fragment",id="fragmentshader")
+		| #define pi 3.141592653589793238462643383279
 
-    varying vec2 vUv;
+		| varying vec2 vUv;
 
-    attribute vec3 value_color;
-    varying vec3 vColor;
+		| attribute vec3 value_color;
+		| varying vec3 vColor;
 
-    attribute float size;
+		| attribute float size;
 
-    uniform float earth_i;
-    uniform float earth_om;
+		| uniform float earth_i;
+		| uniform float earth_om;
 
-    uniform float jed;
+		| uniform float jed;
 
-    attribute float a;
-    attribute float e;
-    attribute float i;
-    attribute float o;
-    attribute float P;
-    attribute float ma;
-    attribute float n;
-    attribute float w;
-    attribute float epoch;
+		| attribute float a;
+		| attribute float e;
+		| attribute float i;
+		| attribute float o;
+		| attribute float P;
+		| attribute float ma;
+		| attribute float n;
+		| attribute float w;
+		| attribute float epoch;
 
-    attribute float locked;
-    varying float vLocked;
+		| attribute float locked;
+		| varying float vLocked;
 
-    vec3 getAstroPos() {
-      float i_rad = (i) * pi/180.0;
-      float o_rad = (o) * pi/180.0; // longitude of ascending node
-      float p_rad = (w) * pi/180.0; // LONGITUDE of perihelion
-      float ma_rad = ma * pi/180.0;
-      float n_rad;
-      if (P > 0.) {
-        n_rad = 2.0 * pi / P;
-      }
-      else {
-        n_rad = n * pi/180.0; // mean motion
-      }
+		| vec3 getAstroPos() {
+		| 	float i_rad = (i) * pi/180.0;
+		| 	float o_rad = (o) * pi/180.0; // longitude of ascending node
+		| 	float p_rad = (w) * pi/180.0; // LONGITUDE of perihelion
+		| 	float ma_rad = ma * pi/180.0;
+		| 	float n_rad;
+		| 	if (P > 0.) {
+		| 		n_rad = 2.0 * pi / P;
+		| 	}
+		| 	else {
+		| 		n_rad = n * pi/180.0; // mean motion
+		| 	}
 
-      float d = jed - epoch;
-      float M = ma_rad + n_rad * d;
+		| 	float d = jed - epoch;
+		| 	float M = ma_rad + n_rad * d;
 
-      // Estimate eccentric and true anom using iterative approx
-      float E0 = M;
-      // converted do/while:
-      float E1 = M + e * sin(E0);
-      float lastdiff = abs(E1-E0);
-      E0 = E1;
-      for (int foo=0; foo < 25; foo++) {
-        E1 = M + e * sin(E0);
-        lastdiff = abs(E1-E0);
-        E0 = E1;
-        if (lastdiff > 0.0000001) {
-          break;
-        }
-      }
-      float E = E0;
+		| 	// Estimate eccentric and true anom using iterative approx
+		| 	float E0 = M;
+		| 	// converted do/while:
+		| 	float E1 = M + e * sin(E0);
+		| 	float lastdiff = abs(E1-E0);
+		| 	E0 = E1;
+		| 	for (int foo=0; foo < 25; foo++) {
+		| 		E1 = M + e * sin(E0);
+		| 		lastdiff = abs(E1-E0);
+		| 		E0 = E1;
+		| 		if (lastdiff > 0.0000001) {
+		| 			break;
+		| 		}
+		| 	}
+		| 	float E = E0;
 
-      float v = 2.0 * atan(sqrt((1.0+e)/(1.0-e)) * tan(E/2.0));
+		| 	float v = 2.0 * atan(sqrt((1.0+e)/(1.0-e)) * tan(E/2.0));
 
-      // radius vector, in AU
-      float r = a * (1.0 - e*e) / (1.0 + e * cos(v)) * {{PIXELS_PER_AU}};
+		| 	// radius vector, in AU
+		| 	float r = a * (1.0 - e*e) / (1.0 + e * cos(v)) * {{PIXELS_PER_AU}};
 
-      // heliocentric coords
-      float X = r * (cos(o_rad) * cos(v + p_rad - o_rad) - sin(o_rad) * sin(v + p_rad - o_rad) * cos(i_rad));
-      float Y = r * (sin(o_rad) * cos(v + p_rad - o_rad) + cos(o_rad) * sin(v + p_rad - o_rad) * cos(i_rad));
-      float Z = r * (sin(v + p_rad - o_rad) * sin(i_rad));
-      return vec3(X, Y, Z);
-    }
+		| 	// heliocentric coords
+		| 	float X = r * (cos(o_rad) * cos(v + p_rad - o_rad) - sin(o_rad) * sin(v + p_rad - o_rad) * cos(i_rad));
+		| 	float Y = r * (sin(o_rad) * cos(v + p_rad - o_rad) + cos(o_rad) * sin(v + p_rad - o_rad) * cos(i_rad));
+		| 	float Z = r * (sin(v + p_rad - o_rad) * sin(i_rad));
+		| 	return vec3(X, Y, Z);
+		| }
 
-    void main() {
-      vColor = value_color;
-      vLocked = locked;
+		| void main() {
+		| 	vColor = value_color;
+		| 	vLocked = locked;
 
-      vec3 newpos = getAstroPos();
-      vec4 mvPosition = modelViewMatrix * vec4(newpos, 1.0);
-      gl_Position = projectionMatrix * mvPosition;
-      gl_PointSize = size;
-    }
-  script(type="x-shader/x-fragment",id="fragmentshader")
-    varying vec2 vUv;
-    varying vec3 vColor;
-    varying float vLocked;
-    uniform vec3 color;
-    uniform sampler2D small_roid_texture;
-    uniform sampler2D small_roid_circled_texture;
+		| 	vec3 newpos = getAstroPos();
+		| 	vec4 mvPosition = modelViewMatrix * vec4(newpos, 1.0);
+		| 	gl_Position = projectionMatrix * mvPosition;
+		| 	gl_PointSize = size;
+		| }
+	script(type="x-shader/x-fragment",id="fragmentshader")
+		| varying vec2 vUv;
+		| varying vec3 vColor;
+		| varying float vLocked;
+		| uniform vec3 color;
+		| uniform sampler2D small_roid_texture;
+		| uniform sampler2D small_roid_circled_texture;
 
-    void main() {
-      if (vLocked == 0.0) {
-      gl_FragColor = vec4(vColor, 1.0) * texture2D(small_roid_texture,
-        vec2(gl_PointCoord.x, 1.0 - gl_PointCoord.y));
-      }
-      else {
-      gl_FragColor = vec4(vColor, 1.0) * texture2D(small_roid_circled_texture,
-        vec2(gl_PointCoord.x, 1.0 - gl_PointCoord.y));
-      }
-    }
-  </script>
-  <script src="vendor/vendor.min.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-  <script src="js/Worker.js"></script>
-  <script src="js/ephemeris.js"></script>
-  <script src="js/ellipse.js"></script>
-  <script src="js/util.js"></script>
-  <script src="js/main.js"></script>
-</body>
-</html>
+		| void main() {
+		| 	if (vLocked == 0.0) {
+		| 		gl_FragColor = vec4(vColor, 1.0) * texture2D(small_roid_texture, vec2(gl_PointCoord.x, 1.0 - gl_PointCoord.y));
+		| 	}
+		| 	else {
+		| 		gl_FragColor = vec4(vColor, 1.0) * texture2D(small_roid_circled_texture, vec2(gl_PointCoord.x, 1.0 - gl_PointCoord.y));
+		| 	}
+		| }
+	script(src="vendor/vendor.min.js")
+	script(src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js")
+	script(src="js/Worker.js")
+	script(src="js/ephemeris.js")
+	script(src="js/ellipse.js")
+	script(src="js/util.js")
+	script(src="js/main.js")
