--- a/public/styl/style.styl
+++ b/public/styl/style.styl
@@ -8,7 +8,7 @@ body
   font-family  arial
   font-size  100%
 
-  background-image url('/images/universe.jpg')
+  background-image url('/img/universe.jpg')
 
 #main-caption
   position   absolute
