--- a/public/3d/css/app.styl
+++ b/public/3d/css/app.styl
@@ -7,6 +7,7 @@
 
 body
   font-family "Open Sans", "Helvetica Neue",Helvetica,Arial,sans-serif !important
+  user-select none
 
 #app-wrapper
   z-index 10
@@ -14,6 +15,7 @@ body
   top 10px
   left 10px
   margin-right 10px
+  max-width 80%
 
 #header
   background-color rgba(255,255,255,0.8)
