add asteroid data to table

--- a/public/3d/css/app.css
+++ b/public/3d/css/app.css
@@ -1,6 +1,23 @@
 @import "bootstrap-combined.min.css";
-body{font-family:"Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif !important}
-#app-wrapper{z-index:10;position:absolute;top:10px;left:10px;margin-right:10px}
-#header{background-color:rgba(255,255,255,0.8);font-size:18px;padding:5px 10px}
-#sidebar{top:55px;left:10px;margin-top:15px}
-#ast-list{margin-top:10px;background-color:rbga(255,255,255,.6)}
+body{font-family:"Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif !important;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}
+#app-wrapper{z-index:10;position:absolute;top:10px;left:10px;margin-right:10px;width:100%}
+#header{background-color:rgba(255,255,255,0.8);font-size:20px;font-weight:bold;padding:5px 10px;max-width:70%}
+#asteroid-detail-wrapper{background-color:rgba(255,255,255,0.8);position:absolute;top:90px;right:100px;padding:5px}
+#asteroid-detail-title{font-weight:bold;font-size:18px;line-height:1.5}
+#asteroid-detail-header{font-weight:bold;margin-top:15px}
+#leap-toggle{position:absolute;z-index:100;bottom:10px;right:10px;padding:2px 5px;color:#000;background-color:rgba(255,255,255,0.6);cursor:pointer;}
+#leap-toggle.leap-disabled{background-color:rgba(255,255,255,0.2);}
+#leap-toggle.leap-disabled:hover{background-color:rgba(255,255,255,0.6)}
+.asteroid-detail-col{float:left;margin-right:15px;}
+.asteroid-detail-col b{color:#888}
+.clear{clear:both;height:0;line-height:0;font-size:0;padding:0;margin:0;display:block}
+#sidebar{margin-top:40px}
+.close-button{display:none !important}
+#asteroid-list{width:450px;background-color:rbga(1,1,1,.5);color:#ccc;}
+#asteroid-list thead th{vertical-align:top;}
+#asteroid-list thead th:hover{background-color:#f5f5f5;color:#333;cursor:pointer}
+#asteroid-list tbody tr:hover,#asteroid-list tbody tr.selected-row{color:#333;cursor:pointer;background-color:#f5f5f5}
+#asteroid-list tbody tr:nth-child(n+2) td{border-color:#333}
+#asteroid-list tr td,#asteroid-list tr th{text-align:center;}
+#asteroid-list tr td .th-units,#asteroid-list tr th .th-units{color:#aaa;font-weight:normal}
+#asteroid-list-wrapper{margin-top:10px}
