--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -1,5 +1,5 @@
-// @import "nib"
-// @import "bootstrap-combined.min.css"
+@import "nib"
+@import "bootstrap-combined.min.css"
 
 // ----------------------------------------------------------------------------
 // Styles
@@ -104,88 +104,17 @@ body
 #asteroid-list-wrapper
   margin-top 10px
   
+
+  
 body
   overflow   hidden
   padding    0
   margin     0
-
-  color    #fff
   background-color #000
-  font-family  arial
   font-size  100%
 
   background-image url('/img/universe.jpg')
 
-#main-caption
-  position   absolute
-  top    0px
-  width    100%
-  padding    5px
-  text-align   center
-
-#other-caption
-  position   absolute
-  top    1.5em
-  width    100%
-  padding    5px
-  text-align   center
-
-#controls
-  width 100%
-  background-color #fff
-  position relative
-  left 0
-  top 0
-  padding 5px 10px
-  font-size 13px
-
-#sidebar
-  z-index 10
-  position absolute
-  left 0
-  top 0
-  padding 5px 10px
-  font-size 15px
-  background-color #000
-  color #f0f0f0
-  width 150px
-  -moz-border-radius-bottomright 15px
-  border-bottom-right-radius 15px
-  border-right 1px solid #ccc
-
-#sidebar a
-  color #f0f0f0
-
-
-#sidebar table
-  font-size 11px
-  border 1px solid #ccc
-  border-collapse collapse
-  margin-top 6px
-  margin-bottom 10px
-
-#sidebar table td
-  border 1px solid #ccc
-  padding 4px
-  cursor pointer
-
-
-#caption-container
-  background-color #000
-
-#info a
-  color    #66F
-  text-decoration  none
-
-#info ahover
-  text-decoration  underline
-
-#info .bottom
-  position   absolute
-  bottom     0px
-  right    5px
-  padding    5px
-  text-align right
 
 
 #loading
