fixed shader id

--- a/views/index.jade
+++ b/views/index.jade
@@ -11,7 +11,7 @@ body
 
 	div#container
 
-	script(type="x-shader/x-fragment",id="fragmentshader")
+	script(type="x-shader/x-fragment",id="vertexshader")
 		| #define pi 3.141592653589793238462643383279
 
 		| varying vec2 vUv;
