--- a/public/3d/css/app.css
+++ b/public/3d/css/app.css
@@ -2,7 +2,11 @@
 body{font-family:"Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif !important;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}
 #app-wrapper{z-index:10;position:absolute;top:10px;left:10px;margin-right:10px;width:100%}
 #header{background-color:rgba(255,255,255,0.8);font-size:20px;font-weight:bold;padding:5px 10px;max-width:70%}
-#asteroid-detail-wrapper{background-color:rgba(255,255,255,0.8);position:absolute;top:90px;right:100px;padding:5px}
+#asteroid-detail-close{cursor:pointer;position:absolute;top:5px;right:5px}
+#asteroid-detail-wrapper{background-color:rgba(255,255,255,0.7);position:absolute;top:90px;right:100px;padding:5px;-webkit-transform:translateX(500px);-moz-transform:translateX(500px);-o-transform:translateX(500px);-ms-transform:translateX(500px);transform:translateX(500px);-webkit-transition:background-color, -webkit-transform .5s;-moz-transition:background-color, -moz-transform .5s;-o-transition:background-color, -o-transform .5s;-ms-transition:background-color, -ms-transform .5s;transition:background-color,transform .5s;}
+#asteroid-detail-wrapper.asteroid-detail-bounce{-webkit-animation:bounce 1s ease;-moz-animation:bounce 1s ease;-o-animation:bounce 1s ease;-ms-animation:bounce 1s ease;animation:bounce 1s ease;-webkit-animation-fill-mode:both;-moz-animation-fill-mode:both;-o-animation-fill-mode:both;-ms-animation-fill-mode:both;animation-fill-mode:both}
+#asteroid-detail-wrapper.asteroid-detail-active{-webkit-transform:translateX(0);-moz-transform:translateX(0);-o-transform:translateX(0);-ms-transform:translateX(0);transform:translateX(0)}
+#asteroid-detail-wrapper:hover{background-color:rgba(255,255,255,0.8)}
 #asteroid-detail-title{font-weight:bold;font-size:18px;line-height:1.5}
 #asteroid-detail-header{font-weight:bold;margin-top:15px}
 #leap-toggle{position:absolute;z-index:100;bottom:10px;right:10px;padding:2px 5px;color:#000;background-color:rgba(255,255,255,0.6);cursor:pointer;}
@@ -13,11 +17,28 @@ body{font-family:"Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif !import
 .clear{clear:both;height:0;line-height:0;font-size:0;padding:0;margin:0;display:block}
 #sidebar{margin-top:40px}
 .close-button{display:none !important}
-#asteroid-list{width:450px;background-color:rbga(1,1,1,.5);color:#ccc;}
+#asteroid-list{width:450px;color:#ccc;-webkit-transition:background-color .4s;-moz-transition:background-color .4s;-o-transition:background-color .4s;-ms-transition:background-color .4s;transition:background-color .4s;}
+#asteroid-list:hover{background-color:rgba(0,0,0,0.5)}
 #asteroid-list thead th{vertical-align:top;}
 #asteroid-list thead th:hover{background-color:#f5f5f5;color:#333;cursor:pointer}
-#asteroid-list tbody tr:hover,#asteroid-list tbody tr.selected-row{color:#333;cursor:pointer;background-color:#f5f5f5}
+#asteroid-list tbody tr:hover,#asteroid-list tbody tr.asteroid-row-selected{color:#333;cursor:pointer;background-color:#f5f5f5}
 #asteroid-list tbody tr:nth-child(n+2) td{border-color:#333}
 #asteroid-list tr td,#asteroid-list tr th{text-align:center;}
 #asteroid-list tr td .th-units,#asteroid-list tr th .th-units{color:#aaa;font-weight:normal}
 #asteroid-list-wrapper{margin-top:10px}
+@-moz-keyframes bounce{0%,20%,50%,80%,100%{-webkit-transform:translateY(0);-moz-transform:translateY(0);-o-transform:translateY(0);-ms-transform:translateY(0);transform:translateY(0)}
+40%{-webkit-transform:translateY(-30px);-moz-transform:translateY(-30px);-o-transform:translateY(-30px);-ms-transform:translateY(-30px);transform:translateY(-30px)}
+60%{-webkit-transform:translateY(-15px);-moz-transform:translateY(-15px);-o-transform:translateY(-15px);-ms-transform:translateY(-15px);transform:translateY(-15px)}
+}@-webkit-keyframes bounce{0%,20%,50%,80%,100%{-webkit-transform:translateY(0);-moz-transform:translateY(0);-o-transform:translateY(0);-ms-transform:translateY(0);transform:translateY(0)}
+40%{-webkit-transform:translateY(-30px);-moz-transform:translateY(-30px);-o-transform:translateY(-30px);-ms-transform:translateY(-30px);transform:translateY(-30px)}
+60%{-webkit-transform:translateY(-15px);-moz-transform:translateY(-15px);-o-transform:translateY(-15px);-ms-transform:translateY(-15px);transform:translateY(-15px)}
+}@-o-keyframes bounce{0%,20%,50%,80%,100%{-webkit-transform:translateY(0);-moz-transform:translateY(0);-o-transform:translateY(0);-ms-transform:translateY(0);transform:translateY(0)}
+40%{-webkit-transform:translateY(-30px);-moz-transform:translateY(-30px);-o-transform:translateY(-30px);-ms-transform:translateY(-30px);transform:translateY(-30px)}
+60%{-webkit-transform:translateY(-15px);-moz-transform:translateY(-15px);-o-transform:translateY(-15px);-ms-transform:translateY(-15px);transform:translateY(-15px)}
+}@-ms-keyframes bounce{0%,20%,50%,80%,100%{-webkit-transform:translateY(0);-moz-transform:translateY(0);-o-transform:translateY(0);-ms-transform:translateY(0);transform:translateY(0)}
+40%{-webkit-transform:translateY(-30px);-moz-transform:translateY(-30px);-o-transform:translateY(-30px);-ms-transform:translateY(-30px);transform:translateY(-30px)}
+60%{-webkit-transform:translateY(-15px);-moz-transform:translateY(-15px);-o-transform:translateY(-15px);-ms-transform:translateY(-15px);transform:translateY(-15px)}
+}@keyframes bounce{0%,20%,50%,80%,100%{-webkit-transform:translateY(0);-moz-transform:translateY(0);-o-transform:translateY(0);-ms-transform:translateY(0);transform:translateY(0)}
+40%{-webkit-transform:translateY(-30px);-moz-transform:translateY(-30px);-o-transform:translateY(-30px);-ms-transform:translateY(-30px);transform:translateY(-30px)}
+60%{-webkit-transform:translateY(-15px);-moz-transform:translateY(-15px);-o-transform:translateY(-15px);-ms-transform:translateY(-15px);transform:translateY(-15px)}
+}
