--- a/public/3d/css/app.styl
+++ b/public/3d/css/app.styl
@@ -58,6 +58,7 @@ body
 #asteroid-detail-header
   font-weight bold
   margin-top 15px
+  border-bottom 1px solid #333
 
 #leap-toggle
   position absolute
