added fix for leap

--- a/views/index.jade
+++ b/views/index.jade
@@ -24,27 +24,27 @@ body
 			.asteroid-detail-row
 				.asteroid-detail-col
 					b Days&nbsp;out
-					br 
-					span 30
+					br
+					span(id="ast-detail-days-out") 30
 				.asteroid-detail-col
 					b Stay
-					br 
-					span 30
+					br
+					span(id="ast-detail-stay") 30
 				.asteroid-detail-col
 					b Days&nbsp;back
-					br 
-					span 30
+					br
+					span(id="ast-detail-days-back") 30
 				.clear
 			#asteroid-detail-header Asteroid Details
 			.asteroid-detail-row
 				.asteroid-detail-col
 					b Diameter
-					br 
-					span 30
+					br
+					span(id="ast-detail-diameter") 30
 				.asteroid-detail-col
 					b Brightness&nbsp;(H)
-					br 
-					span 30
+					br
+					span(id="ast-detail-brightness") 30
 				.clear
 		#asteroid-list-wrapper
 			table#asteroid-list.table.table-hover
