--- a/views/index.jade
+++ b/views/index.jade
@@ -19,7 +19,7 @@ body
 				button.btn.btn-inverse.asteroid-sort-option(type="button",data-sort="mindV") Least Energy
 
 		#asteroid-detail-wrapper
-			#asteriod-detail-close x
+			#asteroid-detail-close x
 			#asteroid-detail-title Name
 			#asteroid-detail-header Trip
 			.asteroid-detail-row
