add body overflow hidden

--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -8,6 +8,8 @@
 body
   font-family "Open Sans", "Helvetica Neue",Helvetica,Arial,sans-serif !important
   user-select none
+  overflow hidden
+  height 100%
 
 #app-wrapper
   z-index 10
