--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 !!!
 html
 	head
-		title Asterank - 3D Asteroid Orbit Space Simulation
+		title Find Asteroids for NASA to Visit - Roidhopper
 		meta(charset="utf-8")
 		meta(name="viewport",content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0")
 		link(rel="stylesheet",href="css/style.css")
